--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -96,5 +96,6 @@
         <script src="js/department.js"></script>
         <script src="js/jquery-custom-growl.js"></script>
         <script src="jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
+        <script src="js/checklist-model.js"></script>
     </body>
 </html>
