--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -50,8 +50,8 @@
                         <li class="dropdown">
                             <a href="" class="dropdown-toggle topic" data-toggle="dropdown">Customer<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#" class="custom-menu">Add Customers</a></li>
-                                <li><a href="#" class="custom-menu">View Customer Infromation</a></li>
+                                <li><a href="#/customer" class="custom-menu">Add Customers</a></li>
+                                <li><a href="#/tablecustomer" class="custom-menu">View Customer Infromation</a></li>
                                 <li><a href="#" class="custom-menu">Applointment</a></li>
                             </ul>
                         </li>
@@ -84,9 +84,9 @@
                 </div>
             </div>
         </div>
-         
+
         <div ng-view></div>
-        
+
         <script src="js/angular.min.js"></script>
         <script src="js/angular-route.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -96,5 +96,7 @@
         <script src="js/department.js"></script>
         <script src="js/jquery-custom-growl.js"></script>
         <script src="jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
+        <script src="../js/customer.js"></script>
+        <script src="../js/checklist-model.js"></script>
     </body>
 </html>
