--- a/src/main/webapp/pages/employee.html
+++ b/src/main/webapp/pages/employee.html
@@ -21,12 +21,15 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label"><span class="necessary">*</span> Password : </label>
                     <div class="col-md-3">
-                        <input type="password" class="form-control" ng-model="employee.password">
+                        <input type="password" class="form-control" ng-model="passwordMatches">
                     </div>
 
                     <label class="col-md-2 control-label"><span class="necessary">*</span> Confirm Password : </label>
                     <div class="col-md-3">
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" ng-model="employee.password">
+                    </div>
+                    <div class="col-md-pull-0" ng-show="compairPassword()">
+                        <a href="" class="glyphicon glyphicon-ok"></a>
                     </div>
                 </div>
                 <div class="form-group">
@@ -54,7 +57,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Sex : </label>
                     <div class="col-md-3">
-                        <select class="form-control" ng-model="employee.sex">
+                        <select class="form-control" ng-model="employee.sex" value="Male">
                             <option value="Male">Male</option>
                             <option value="Female">Female</option>
                         </select>
@@ -62,7 +65,7 @@
 
                     <label class="col-md-2 control-label" ><span class="necessary">*</span> Blood : </label>
                     <div class="col-md-3">
-                        <select class="form-control" ng-model="employee.blood">
+                        <select class="form-control" ng-model="employee.blood" value="A">
                             <option value="A">A</option>
                             <option value="B">B</option>
                             <option value="O">O</option>
@@ -73,7 +76,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Marry Status : </label>
                     <div class="col-md-3">
-                        <select class="form-control" ng-model="employee.marryStatus">
+                        <select class="form-control" ng-model="employee.marryStatus" value="Single">
                             <option value="Single">Single</option>
                             <option value="Married">Married</option>
                             <option value="Widowed">Widowed</option>
@@ -140,17 +143,14 @@
 
                     <label class="col-md-2 control-label"><span class="necessary">*</span> Work Status : </label>
                     <div class="col-md-3">
-                        <select class="form-control" ng-model="employee.workStatus">
-                            <option value="Nomal">Nomal</option>
+                        <select class="form-control" ng-model="employee.workStatus" value="Normal">
+                            <option value="Normal">Nomal</option>
                             <option value="Suspension">Suspension</option>
                             <option value="Resigned">Resigned</option>
                         </select>
                     </div>
                 </div>
-                <div style="width: 200px;height: 250px; background: plum;border-radius: 5px;">
-
-                </div>
-                <input type="file">
+                
                 <div class="panel">
                     <div class="panel-heading">
                         <div class="h1">
@@ -210,13 +210,14 @@
                             <div class="col-md-3">
                                 <input class="form-control" ng-model="employee.contact.relation">
                             </div>
+                             <div id="growl-custom"></div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-2 control-label">Tel : </label>
                             <div class="col-md-3">
                                 <input class="form-control" ng-model="employee.contact.tel">
                             </div>
-                        </div>
+                         </div>
                     </div>
                 </div>
             </div>
