--- a/src/main/webapp/pages/customer.html
+++ b/src/main/webapp/pages/customer.html
@@ -1,4 +1,5 @@
 
+<div id="growl-custom"></div>
 <div class="container">
     <div class="panel panel-info" id="panel-top">
         <div class="panel-heading">
@@ -19,12 +20,12 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-md-2 control-label"><span class="necessary">*</span> Password : </label>
+                    <label class="col-md-2 control-label"></span> Password : </label>
                     <div class="col-md-3">
                         <input type="password" class="form-control" ng-model="customer.password">
                     </div>
 
-                    <label class="col-md-2 control-label"><span class="necessary">*</span> Confirm Password : </label>
+                    <label class="col-md-2 control-label"></span> Confirm Password : </label>
                     <div class="col-md-3">
                         <input type="password" class="form-control">
                     </div>
@@ -60,7 +61,7 @@
                         </select>
                     </div>
 
-                    <label class="col-md-2 control-label" ><span class="necessary">*</span> Blood : </label>
+                    <label class="col-md-2 control-label" ></span> Blood : </label>
                     <div class="col-md-3">
                         <select class="form-control" ng-model="customer.blood">
                             <option value="A">A</option>
@@ -73,12 +74,12 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-2 control-label"><span class="necessary">*</span> Race : </label>
+                    <label class="col-md-2 control-label"></span> Race : </label>
                     <div class="col-md-3">
                         <input class="form-control" ng-model="customer.race">
                     </div>
 
-                    <label class="col-md-2 control-label"><span class="necessary">*</span> Current Address : </label>
+                    <label class="col-md-2 control-label"></span> Current Address : </label>
                     <div class="col-md-3">
                         <input class="form-control" ng-model="customer.address">
                     </div>
