--- a/src/main/webapp/pages/tablecustomer.html
+++ b/src/main/webapp/pages/tablecustomer.html
@@ -1,3 +1,4 @@
+<div id="growl-custom"></div>
 <div class="container">
     <div class="row">
         <div class="panel panel-info" id="panel-top">
