--- a/src/main/webapp/pages/employee-information.html
+++ b/src/main/webapp/pages/employee-information.html
@@ -1,1 +1,35 @@
-<div>Employee-Information</div>
+<div class="container">
+    <div class="panel panel-info" id="panel-top">
+        <div class="panel-heading">
+            <div class="h1">
+                Employee Information
+            </div>
+        </div>
+        <div class="panel-body">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Information
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive">
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Tel</th>
+                            <th>Department</th>
+                            <th>Work Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        
+                    </tbody>
+                </table>
+            </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
