--- a/src/main/webapp/pages/employee.html
+++ b/src/main/webapp/pages/employee.html
@@ -20,16 +20,16 @@
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label"><span class="necessary">*</span> Password : </label>
-                    <div class="col-md-3">
-                        <input type="password" class="form-control" id="password" ng-model="passwordMatches" placeholder="Password">
+                    <div class="col-md-3 password">
+                        <input type="password"  ng-change="clearError('.password')" class="form-control" id="password" ng-model="passwordMatches" placeholder="Password">
                     </div>
 
                     <label class="col-md-2 control-label"><span class="necessary">*</span> Confirm Password : </label>
-                    <div class="col-md-3">
-                        <input type="password" class="form-control" id="password" ng-model="employee.password" placeholder="Confirm Password">
+                    <div class="col-md-3 password">
+                        <input type="password"  ng-change="clearError('.password')" class="form-control" id="password" ng-model="employee.password" placeholder="Confirm Password">
                     </div>
                     <div class="col-md-1" ng-show="compairPassword()">
-                        <i id="checp-password"></i>
+                        <i id="checp-password" style="margin-top: 7px;"></i>
                     </div>
                 </div>
                 <div class="form-group">
