commit employee-information and commit employee-moreDetail

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -99,5 +99,6 @@
         <script src="../js/customer.js"></script>
         <script src="../js/checklist-model.js"></script>
         <script src="js/checklist-model.js"></script>
+        <script src="js/employee-moredetail.js"></script>
     </body>
 </html>
