--- a/src/main/webapp/pages/department.html
+++ b/src/main/webapp/pages/department.html
@@ -50,7 +50,7 @@
                                             <td><p class="kick">{{dep.id}}</p></td>
                                             <td><p class="kick">{{dep.name}}</p></td>
                                             <td>
-                                                <input type="submit" class="btn btn-primary" value="Update" style="padding: 6px 40px" ng-click="actionUpdate(dep.id, dep.name)">
+                                                <input type="submit" class="btn btn-primary" value="Update" style="padding: 6px 40px" ng-click="actionUpdate(dep)">
                                                 <input type="submit" class="btn btn-danger" value="Delete" style="padding: 6px 40px" data-toggle="modal" data-target="#model-delete" ng-click="actionDelete(dep)">
                                             </td>
                                         </tr>
