--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
     <head>
         <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/handle.css">
-        <link rel="stylesheet" href="css/custom.css">
-        <link rel="stylesheet" href="css/bootstrap-custom-growl.css">
-        <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui.min.css">
-        <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui.structure.min.css">
-        <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui.theme.min.css">
-        <script src="js/jquery-1.11.3.min.js"></script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+
+        <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
+        <link rel="stylesheet" href="css/handle.css" type="text/css">
+        <link rel="stylesheet" href="css/custom.css" type="text/css">
+        <link rel="stylesheet" href="css/bootstrap-custom-growl.css" type="text/css">
+        <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui.min.css" type="text/css">
+        <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui.structure.min.css" type="text/css">
+        <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui.theme.min.css" type="text/css">
+        <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
 
     </head>
-    <body ng-app="app">
+    <body ng-app="app" ng-controller="homeController">
         <div class="navbar navbar-custom navbar-static-top">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle sub-menu" data-toggle="collapse" data-target="#navbar">
@@ -78,6 +84,7 @@
                     </ul>
                     <form class="navbar-form navbar-right">
                         <div class="form-group">
+                            <label style="color: white; padding: 0px 10px">{{namelogin.nameTh}}</label>
                             <a href="#" class="btncustom btn-custom-sky">Login</a>
                         </div>
                     </form>
