commit login & logout

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -85,7 +85,7 @@
                     <form class="navbar-form navbar-right">
                         <div class="form-group">
                             <label style="color: white; padding: 0px 10px">{{namelogin.nameTh}}</label>
-                            <a href="#" class="btncustom btn-custom-sky">Login</a>
+                            <a class="btncustom btn-custom-sky btn-border" id="btn-login" ng-click="loginhref()">Login</a>
                         </div>
                     </form>
                 </div>
