--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,7 @@
                         <li class="dropdown">
                             <a href="" class="dropdown-toggle topic" data-toggle="dropdown">Doctor<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#" class="custom-menu">Add Doctors</a></li>
+                                <li><a href="#/doctor" class="custom-menu">Add Doctors</a></li>
                                 <li><a href="#" class="custom-menu">View Doctors Information</a></li>
                             </ul>
                         </li>
@@ -107,5 +107,6 @@
         <script src="../js/checklist-model.js"></script>
         <script src="js/checklist-model.js"></script>
         <script src="js/employee-moredetail.js"></script>
+        <script src="js/doctor.js"></script>
     </body>
 </html>
