--- a/src/main/webapp/pages/employee-moredetail.html
+++ b/src/main/webapp/pages/employee-moredetail.html
@@ -7,7 +7,7 @@
         </div>
         <div class="panel-body">
 
-                        <div class="row">
+<!--                        <div class="row">
                             <div class="col-md-8"></div>
                             <div class="col-md-4">
                                 <img class="img-responsive center-block" src="http://i.istockimg.com/file_thumbview_approve/50404602/3/stock-illustration-50404602-cartoon-penguin.jpg">
@@ -15,7 +15,7 @@
                                     <input id="file" type="file" value="Upload">
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
 
             <div class="row" style="margin-top: 20px;">
                 <div class="form-horizontal">
